# umbridge-workshop-2024

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: bump-version.yml  pr-agent.yml
scripts/analytic_inverse/: Dockerfile  README.md  app.py  inverse_example.py  server_donut.py  server_funnel.py
scripts/deconvolution_1d/: README.md  app.py  inverse_example.py
scripts/ew/: Dockerfile  README.md  app.py  basic_app.py  run.py  server.py
scripts/muq_beam/: Dockerfile  README.md  ServeForwardProblem.py  ServeLogPosterior.py  app.py  forward_app.py  forward_app_class.py
tests/: app.py  test_fixed_size_buffers.py  test_panel.py  test_utils.py
viz_umbridge/: __init__.py  fixed_size_buffers.py  measles.py  panel_app.py  pymc.py  utils.py
