[project]
name = "viz_umbridge"
version = "1.0.2"
description = "Repository for the 2024 Umbridge Workshop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.20.0",
    "corner>=2.2.3",
    "emcee>=3.1.6",
    "jupyter-bokeh>=4.0.5",
    "panel>=1.5.4",
    "pymc>=5.18.2",
    "sciris>=3.2.0",
    "umbridge>=1.2.4",
    "laser-cohorts @ git+https://github.com/krosenfeld-IDM/laser-cohorts.git@v2.0.2",
    "pydantic>=2.10.3",
    "pywavelets>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[tool.bumpversion]
current_version = "1.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
